--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -44,16 +44,18 @@
     border-radius: 2px !important;
   }
   .el-button--primary {
-    background: $color-467DD8 !important;
+    background: $theme-color !important;
     &:focus,
     &:hover,
     &:active {
-      background: $color-467DD8 !important;
+      background: $theme-color !important;
     }
   }
 }
-.el-button--primary.is-link {
-  color: $color-467DD8;
+.el-button--primary.is-link,
+.el-button.is-link:focus,
+.el-button.is-link:hover {
+  color: $theme-color;
 }
 
 .pagination-con {
