项目结构更改优化

--- a/src/components/UsualTable/style/setting.scss
+++ b/src/components/UsualTable/style/setting.scss
@@ -4,7 +4,7 @@
 .columnRef {
   font-size: 14px;
   line-height: 14px;
-  :deep(.el-checkbox__input.is-checked + .el-checkbox__label) {
+  .el-checkbox__input.is-checked + .el-checkbox__label {
     color: #606266;
   }
 }
